@@ -6,11 +6,13 @@ BUG: Fixed a bug in TPropertyValue::ensureArray() (Qiang)
 CHG: Changed TConditional so that the controls in its template behave like they are in its parent (Qiang)
 CHG: Active Record many-to-many relationship change from self::HAS_MANY to self::MANY_TO_MANY (Wei)
 CHG: Active Record no longer automatically performs adding/removing/updating related objects (Qiang)
+CHG: TJavaScript::encode() will encode data as a list if integer indices are detected (Qiang)
 ENH: Ticket#722 - Add Read Only capabilities to TInPlaceTextBox (Christophe)
 ENH: Active Record supports multiple foreign references of the same table (Wei)
 ENH: Added TDbCommand.queryColumn() (Qiang)
 ENH: Active Record now supports implicitly declared related properties (Qiang)
 ENH: Active Record now supports query criteria for implicitly declared related properties (Qiang)
+ENH: TDataFieldAccessor now supports chained property access without getters. (Qiang)
 NEW: Added TDbLogRoute (Qiang)
 NEW: Added TDataRenderer and TItemDataRenderer (Qiang)
 NEW: Ticket#544 - Added TXCache (Wei)
